--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           node -v
           npm i -g pnpm
-          pnpm install --frozen-lockfile
+          pnpm install --no-frozen-lockfile
           npm run build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@releases/v3
