--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "vitepress": "^1.0.0-rc.10",
     "vitepress-plugin-auto-sidebar": "^1.1.0",
     "vitepress-plugin-mermaid": "^2.0.14",
+    "vitepress-plugin-vue-repl": "0.0.2",
     "vitepress-theme-demoblock": "^3.0.3"
   }
 }
